# dictionary-tools

./: .deepsource.toml  .flake8  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: code_coverage.yml  deepsource.yml  format.yml  lint.yml  unit_tests.yml
dict_structure/: CommentedDict.py  structure.py  utils.py
dict_tools/: CommentedDict.py  data_models.py  structure.py
dictionary_tools/: CommentedDict.py  data_models.py  structure.py
dictionary_tools/tests/: test_commentedDict.py  test_structure.py
docs/html/: .buildinfo  index.html  py-modindex.html
docs/html/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/html/_sources/: index.rst.txt
docs/source/: api.rst  conf.py
src/: CommentedDict.py  data_models.py  structure.py  utils.py
src/tests/: benchmarking.py  test_commentedDict.py  test_structure.py  test_utils.py
structure/: structure.py
structure/tests/: test_structure.py
tests/: benchmarking.py  test_commentedDict.py  test_structure.py  test_utils.py
