[tool.poetry]
name = "dict-structure"
version = "0.1.0"
description = ""
authors = ["Isaac Kitchen-Smith <ikitchensmith@wrentherapeutics.com>"]
readme = "README.md"
packages = [{include = "dict_structure"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
coverage = "^6.5.0"
line-profiler = "^3.5.1"
Sphinx = "^5.2.3"
pydata-sphinx-theme = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
