[tool.poetry]
name = "dict-structure"
version = "0.1.0"
description = ""
authors = ["Isaac Kitchen-Smith <ikitchensmith@wrentherapeutics.com>"]
readme = "README.md"
packages = [{include = "dict_structure"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
coverage = "^6.5.0"
line-profiler = "^3.5.1"
Sphinx = "^5.2.3"
pydata-sphinx-theme = "^0.10.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
mypy = "^0.982"
pydantic = "^1.10.2"

[tool.poetry.group.format.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
pydantic = "^1.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.9"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true